# DataStructursHW2

./: .gitignore  CMakeLists.txt  HW2 dry.docx
Data Structures/: aviv.txt
Data Structures/Exeptions/: exeptions.h
Data Structures/Stack/: Stack.h
Data Structures/Tree/: TNode.h  Tree.h
Data Structures/Tree23/: T23.h  T23Node.h  Tree23.h
DataStructures/: Game.cpp  Game.h  Group.cpp  Group.h  Level.cpp  Level.h  Player.cpp  Player.h  Structure.txt  TNode.h  Tree.h  library1.cpp  main.cpp  main1.cpp
DataStructures/Exeptions/: exeptions.h
DataStructures/Octopus Games/: Game.cpp  Game.h  Group.cpp  Group.h  Level.cpp  Level.h  Player.h  library1.cpp  octopus_test.cpp
DataStructures/OctopusGames/: Game.cpp  Game.h  Group.cpp  Level.cpp  Level.h  Player.h  library1.cpp
DataStructures/Stack/: Stack.h  test_stack.cpp
DataStructures/Tree/: TNode.h  Tree.h  test_tree.cpp
Old/Exeptions/: exeptions.h
Old/OctopusGames/: Game.cpp  Group.h  Level.cpp  Level.h  library1.cpp  octopus_test.cpp
Old/Tree/: TNode.h  Tree.h  test_tree.cpp
TEST1_Z_T/: in0c.txt  in1c.txt  in2c.txt  in3c.txt  in4.txt  in4c.txt  in5c.txt  in6c.txt  our_out0.txt  our_out1.txt  our_out2.txt  our_out3.txt  our_out4.txt  our_out5.txt  our_out6.txt  out0.txt  out1.txt  out2.txt  out4.txt  out5.txt  out6.txt
